Update index.js & analyzer.js for getCharacterCount, fix style.css to align all elements, change font of header and footer

--- a/src/style.css
+++ b/src/style.css
@@ -9,23 +9,23 @@ se pueden combinar con una ,
 
 * {
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
-    font-family: ;
+    font-family: "Coming soon", cursive;
     font-size: 24px;
     color:#333;
     padding: 10px 0;
     text-align: center;
 }
 
-/*Contenedor métricas*/
+/*Caja métricas*/
 ul {
     background-color: #8EAA97;
     width: 600px;
     height: 80px;
-    margin: 30px 0; 
+    margin: 0 auto;
+    margin-left: 20px; 
     padding: 10px;
     border-radius: 12px;
     text-align: center;
@@ -43,12 +43,24 @@ ul {
     display: inline-block;
 }
 
-h2 {
+.centrar-contenedor {
+    max-width: 600px;
+    margin: 0 auto; /* Centra el contenedor horizontalmente */
+    text-align: left; /* Resetea el text-align del contenedor para que los elementos hijos puedan tener su propio alineamiento */
+}
+
+section {
+    text-align: center;
+    width: 100%;
+}
+
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #333;
     font-size: 18px;
-    display: block;
     margin: 0 auto;
-    padding: 2px 20px;
+    padding: 30px 20px 5px;
+    text-align: left; /* Asegura que el texto dentro de h3 se alinee a la izquierda */
 }
 
 textarea[name="user-input"] {
@@ -66,13 +78,14 @@ textarea[name="user-input"] {
     font-size: small;
     color: #FFF;
     width: 180px;
-    height: 30px;
+    height: 32px;
     cursor: pointer;
     background-color: #726680;
     transition: background-color 0.5s;
     border: none;
     border-radius: 8px;
     display: block;
+    margin: 0 auto;
     padding: 8px 16px;
 }
 
@@ -82,7 +95,8 @@ textarea[name="user-input"] {
 }
 
 footer {
+    font-family: "Coming soon", cursive;
     font-size: 12px;
-    margin: 400px 0;
+    margin: 0 auto;
     padding: 20px;
 }
